--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
