--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <meta-data android:name="com.google.android.geo.AIzaSyCYC8bweTG6UBevXamwfO2VaIQI6FBZmt4"
-            android:value="AIzaSyCYC8bweTG6UBevXamwfO2VaIQI6FBZmt4" />
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAohaYwBxScNxQfBpq8axww--hDUXcqMIc" />
     </application>
 </manifest>
