--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.1.1
+  confetti: ^0.7.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter:
