--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.2.1
+  pinput: ^2.2.16
 
 dev_dependencies:
   flutter_lints: ^2.0.0
