--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.2.1
+  intro_screen_onboarding_flutter: ^1.0.0
   pinput: ^2.2.16
 
 dev_dependencies:
@@ -54,7 +55,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/lottie/
     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
