flutter bloc is used for whishlist

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
   google_maps_flutter: ^2.2.1
   intro_screen_onboarding_flutter: ^1.0.0
   pinput: ^2.2.16
