--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,19 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.1.1
+  cloud_firestore: ^4.0.3
   confetti: ^0.7.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_auth: ^4.1.0
+  firebase_core: ^2.1.1
+  firebase_storage: ^11.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
   google_maps_flutter: ^2.2.1
   intro_screen_onboarding_flutter: ^1.0.0
+  lottie: ^1.4.3
   pinput: ^2.2.16
 
 dev_dependencies:
@@ -57,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
