--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  fluttertoast: ^8.1.1
   google_maps_flutter: ^2.2.1
   intro_screen_onboarding_flutter: ^1.0.0
   lottie: ^1.4.3
