--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   fluttertoast: ^8.1.1
   google_maps_flutter: ^2.2.1
+  google_sign_in: ^5.4.2
   intro_screen_onboarding_flutter: ^1.0.0
   lottie: ^1.4.3
   pinput: ^2.2.16
