--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_svg: ^1.1.6
   fluttertoast: ^8.1.1
   google_maps_flutter: ^2.2.1
   google_sign_in: ^5.4.2
   intro_screen_onboarding_flutter: ^1.0.0
   lottie: ^1.4.3
+  pay: ^1.0.11
   pinput: ^2.2.16
 
 dev_dependencies:
@@ -65,6 +67,7 @@ flutter:
   assets:
     - assets/images/
     - assets/lottie/
+    - assets/pay/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
