--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   lottie: ^1.4.3
   pay: ^1.0.11
   pinput: ^2.2.16
+  razorpay_flutter: ^1.3.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
