--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   fluttertoast: ^8.1.1
   google_maps_flutter: ^2.2.1
   google_sign_in: ^5.4.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intro_screen_onboarding_flutter: ^1.0.0
   lottie: ^1.4.3
   pay: ^1.0.11
@@ -51,9 +53,11 @@ dependencies:
   razorpay_flutter: ^1.3.4
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
