--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_svg: ^1.1.6
   fluttertoast: ^8.1.1
+  get: ^4.6.5
   google_maps_flutter: ^2.2.1
   google_sign_in: ^5.4.2
   hive: ^2.2.3
